--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -28,22 +28,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PAV-1r-clU">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="140" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PAV-1r-clU">
                                 <rect key="frame" x="0.0" y="55" width="375" height="548"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="138" id="8sT-4w-uIs" customClass="CategoryCell" customModule="coder_swag" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="138"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="140" id="8sT-4w-uIs" customClass="CategoryCell" customModule="coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8sT-4w-uIs" id="Sg0-t5-idI">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="137.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digital" translatesAutoresizingMaskIntoConstraints="NO" id="43f-8X-Yzv">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="137.5"/>
+                                                    <rect key="frame" x="0.0" y="2" width="375" height="136"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hoodies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMD-yP-67r">
-                                                    <rect key="frame" x="127.5" y="54" width="120" height="30"/>
+                                                    <rect key="frame" x="127.5" y="55" width="120" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="XS7-n4-Xq5"/>
                                                         <constraint firstAttribute="width" constant="120" id="osS-fA-lpI"/>
@@ -55,10 +55,10 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="iMD-yP-67r" firstAttribute="centerY" secondItem="Sg0-t5-idI" secondAttribute="centerY" id="1bv-Pf-2cl"/>
-                                                <constraint firstItem="43f-8X-Yzv" firstAttribute="top" secondItem="Sg0-t5-idI" secondAttribute="top" id="SFd-Tk-fNb"/>
+                                                <constraint firstItem="43f-8X-Yzv" firstAttribute="top" secondItem="Sg0-t5-idI" secondAttribute="top" constant="2" id="SFd-Tk-fNb"/>
                                                 <constraint firstAttribute="trailing" secondItem="43f-8X-Yzv" secondAttribute="trailing" id="fEK-Tz-ROw"/>
                                                 <constraint firstItem="43f-8X-Yzv" firstAttribute="leading" secondItem="Sg0-t5-idI" secondAttribute="leading" id="jhI-9i-Lwv"/>
-                                                <constraint firstAttribute="bottom" secondItem="43f-8X-Yzv" secondAttribute="bottom" id="uhX-cl-Mdu"/>
+                                                <constraint firstAttribute="bottom" secondItem="43f-8X-Yzv" secondAttribute="bottom" constant="2" id="uhX-cl-Mdu"/>
                                                 <constraint firstItem="iMD-yP-67r" firstAttribute="centerX" secondItem="Sg0-t5-idI" secondAttribute="centerX" id="v2D-sj-Aud"/>
                                             </constraints>
                                         </tableViewCellContentView>
